--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
         .download-btn:hover {
             background-color: #218838;
         }
+        .game-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
 
     <div class="container">
         <h1>3D Oyunumu İndir</h1>
+        <img src="images/Sihirli sayı.jpg" alt="Oyun Görseli" class="game-image">
         <p>Oyunumuzu oynamak için aşağıdaki butona tıklayarak APK dosyasını indirebilirsiniz.</p>
         <a href="https://drive.google.com/file/d/1EXydrWilTWz9Zl77dQZf_bL_2eligjMm/view?usp=drive_link" class="download-btn" target="_blank">İndir</a>
     </div>
