--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="container">
         <h1>3D Oyunumu İndir</h1>
-        <img src="images/Sihirli sayı.jpg" alt="Oyun Görseli" class="game-image">
+       <img src="Sihirlisayı.jpg" alt="Oyun Görseli" class="game-image">
         <p>Oyunumuzu oynamak için aşağıdaki butona tıklayarak APK dosyasını indirebilirsiniz.</p>
         <a href="https://drive.google.com/file/d/1EXydrWilTWz9Zl77dQZf_bL_2eligjMm/view?usp=drive_link" class="download-btn" target="_blank">İndir</a>
     </div>
